--- a/frontend/signup1.css
+++ b/frontend/signup1.css
@@ -59,6 +59,23 @@ body {
   transition: 0.3s;
 }
 
+.input-box select {
+  width: 100%;
+  height: 45px;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  outline: none;
+  padding: 0 20px;
+  font-size: 16px;
+  color: #333;
+  transition: 0.3s;
+}
+
+.input-box select:focus {
+  border-color: #64b5f6;
+}
+
 .input-box input:focus {
   border-color: #64b5f6;
 }
@@ -80,7 +97,6 @@ body {
   accent-color: #1976d2;
 }
 
-button.btn,
 button.signup {
   width: 100%;
   height: 45px;
@@ -96,7 +112,31 @@ button.signup {
   transition: background 0.3s;
 }
 
+.btn {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #1976d2;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  text-decoration: underline;
+}
+
+
 button.btn:hover,
 button.signup:hover {
   background: #0d47a1;
+}
+
+a {
+  display: inline-block;
+  margin-top: 15px;
+  text-decoration: none;
+  color: #1976d2;
+  font-size: 14px;
+  text-align: center;
 }
